...
        self.sharedInit()
    }

    private func sharedInit() {
        self.button.translatesAutoresizingMaskIntoConstraints = false

        self.button.setTitle("SAVE", for: .normal)
        self.button.setTitleColor(.white, for: .normal)
        self.button.backgroundColor = UIConstants.trueBlue
        self.button.setTitleColor(.white, for: .normal)
        self.button.layer.cornerRadius = 5
        self.button.layer.masksToBounds = true
        self.button.titleLabel?.font = UIConstants.defaultFont(of: 14, type: .medium)
...
