...
        field.placeholder = "City"
        return field
    }()

    private var countryField: UITextField = {
        let field = UITextField()
        field.placeholder = "Country (e.g. DE)"
        return field
    }()

    private var sepaDataLabel: UILabel = {
        let label = UILabel()
        label.text = "SEPA Data"
...
